--- a/templates/sample/skeleton/catalog-info.yaml
+++ b/templates/sample/skeleton/catalog-info.yaml
@@ -6,15 +6,16 @@ metadata:
   description: ${{values.description | dump}}
   {%- endif %}
   annotations:
-    argocd/app-selector: rht-gitops.com/janus-argocd=${{values.component_id}}-bootstrap
+    #argocd/app-selector: rht-gitops.com/janus-argocd=${{values.component_id}}-bootstrap
     backstage.io/kubernetes-id: ${{values.component_id}}
     janus-idp.io/tekton: ${{values.component_id}}
     backstage.io/source-location: url:https://${{values.host}}/${{values.destination}}
-    backstage.io/techdocs-ref: url:https://${{values.host}}/${{values.destination}}
+    #backstage.io/techdocs-ref: url:https://${{values.host}}/${{values.destination}}
     gitlab.com/project-slug: ${{values.destination}}
     #quay.io/repository-slug: ${{values.quay_destination | dump}}
   tags:
-    - sample
+    - automotive
+    - rhivos
   links:
     - url: https://devspaces${{values.cluster}}/#https://${{values.host}}/${{values.destination}}
       title: OpenShift Dev Spaces (VS Code)
@@ -26,6 +27,3 @@ spec:
   type: service
   lifecycle: production
   owner: ${{values.owner | dump}}
-  providesApis:
-    - ${{values.component_id | dump}}
-
