updated owner reference

--- a/templates/sample/template.yaml
+++ b/templates/sample/template.yaml
@@ -7,7 +7,7 @@ metadata:
   tags:
     - automotive
 spec:
-  owner: rhdh
+  owner: automotive
   type: service
   parameters:
     - title: Provide Information for Application
