--- a/org.yaml
+++ b/org.yaml
@@ -2,11 +2,11 @@ apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
   name: automotive
-  description: Red Hat Developer Hub Automotive Group
+  description: Red Hat Automotive Sample Team
 spec:
   type: team
   profile:
     # Intentional no displayName for testing
-    email: rhdh@demo.redhat.com
+    email: auto@demo.redhat.com
     picture: https://avatars.dicebear.com/api/identicon/team-a@example.com.svg?background=%23fff&margin=25
   children: []
