--- a/templates/sample/template.yaml
+++ b/templates/sample/template.yaml
@@ -1,8 +1,8 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: rhivos-template
-  title: Build RHIVOS (Tekton)
+  name: sample-template
+  title: Sample template
   description: Build the Red Hat In-Vehicle OS
   tags:
     - automotive
