renaming the template due to a naming conflict

--- a/templates/rhivos-build/template.yaml
+++ b/templates/rhivos-build/template.yaml
@@ -1,7 +1,7 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: rhivos-template
+  name: rhivos-build-template
   title: Build RHIVOS
   description: Build the Red Hat In-Vehicle OS
   tags:
