first version of the build pipeline

--- a/templates/rhivos-build/template.yaml
+++ b/templates/rhivos-build/template.yaml
@@ -11,45 +11,42 @@ spec:
   type: service
 
   parameters:
-    - title: Provide basic information for the build
+    - title: Provide RHIVOS Build Information
       required:
         - artifact_id
         - manifest_name
         - manifest_location
-      properties:
-        artifact_id:
-          title: Artifact Id
-          type: string
-          default: devel-build
-          description: RHIVOS Artifact Id
-          maxLength: 40
-          pattern: "^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$"
-        description:
-          title: Description
-          type: string
-          description: Help others understand what this RHIVOS build is for.
-          default: RHIVOS development image
-        manifest_name:
-          title: Manifest
-          type: string
-          description: Name of the manifest file
-          default: devel
-          maxLength: 40
-          pattern: "^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$"
-        manifest_location:
-          title: Location
-          type: string
-          default: ./manifests
-          description: Manifest file location
-
-    - title: Build parameters
-      required:
         - distro
         - arch
         - target
         - mode
         - export_format
       properties:
+        artifact_id:
+          title: Artifact Id
+          type: string
+          default: devel-build
+          maxLength: 40
+          pattern: "^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$"
+          description: RHIVOS Artifact Id
+        description:
+          title: Description
+          type: string
+          default: RHIVOS development image
+          description: Help others understand what this RHIVOS build is for.
+        manifest_name:
+          title: Manifest
+          type: string
+          default: devel
+          pattern: "^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$"
+          description: Name of the manifest file
+          ui:help: 'Hint: without the .yaml extension'
+        manifest_location:
+          title: Manifest Location
+          type: string
+          default: ./manifests
+          description: Manifest file location
+
         distro:
           title: Distro
           type: string
@@ -87,10 +84,11 @@ spec:
             - qcow2
             - container
 
-    - title: Provide basic information for the build environment
+    - title: Provide Build Environment Information
       required:
         - base_domain
         - repo
+        - verify_commits
       properties:
         base_domain:
           title: Cluster Base Domain
@@ -107,6 +105,7 @@ spec:
               type: string
               description: Your SCM host
               default: gitlab-gitlab.apps.cluster-
+              ui:help: 'Hint: apply the same host as your cluster base domain'
             owner:
               title: Repo Owner
               type: string
@@ -114,7 +113,62 @@ spec:
               default: development
               enum:
                 - development
+        verify_commits:
+          title: Verify Commits
+          type: string
+          description: Verify Git repository commits using Red Hat’s Trusted Artifact Signer (TAS) service
+          default: disabled
+          enum:
+            - enabled
+            - disabled
 
+    - title: Provide Image Registry Information
+      required:
+        - image_registry
+      properties:
+        image_registry:
+          title: Image Registry
+          type: string
+          enum:
+            - Openshift
+            - Quay
+      dependencies:
+        image_registry:
+          oneOf:
+            - properties:
+                image_registry:
+                  enum:
+                    - Openshift
+                image_host:
+                  title: Image Host
+                  type: string
+                  description: Host for storing image
+                  default: image-registry.openshift-image-registry.svc:5000
+                image_tag:
+                  title: Image Tag
+                  default: latest
+                  type: string
+                  description: Build Image tag
+            - properties:
+                image_registry:
+                  enum:
+                    - Quay
+                image_host:
+                  title: Image Host
+                  type: string
+                  description: Host for storing image
+                  default: quay-xdrl6.apps.cluster-xdrl6...
+                image_organization:
+                  title: Organization
+                  type: string
+                  description: Name of the Quay Organization
+                  default: quayadmin
+                image_tag:
+                  title: Image Tag
+                  default: latest
+                  type: string
+                  description: Build Image tag
+    
   steps:
     - id: template
       name: Fetch Skeleton + Template
@@ -129,6 +183,7 @@ spec:
           namespace: ${{ parameters.artifact_id }}-dev
           owner: ${{ user.entity.metadata.name }}
           cluster: .apps.${{ parameters.base_domain }}
+          #cluster: .apps.{{ cluster_subdomain }}
           host: ${{ parameters.repo.host }}
           destination: ${{ parameters.repo.owner }}/${{ parameters.artifact_id }}
           manifest_name: ${{ parameters.manifest_name }}
@@ -138,6 +193,7 @@ spec:
           target: ${{ parameters.target }}
           mode: ${{ parameters.mode }}
           export_format: ${{ parameters.export_format }}
+          verify_commits: {{ '${{ parameters.repo.verify_commits }}' }}
 
     - id: publish
       name: Publish
@@ -152,6 +208,49 @@ spec:
       input:
         repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
         catalogInfoPath: "/catalog-info.yaml"
+
+    - id: template-gitops-deployment
+      name: Generating Deployment Resources
+      action: fetch:template
+      input:
+        url: ./manifests
+        copyWithoutTemplating: []
+        values:
+          artifact_id: ${{ parameters.artifact_id }}
+          #component_id: {{ '${{ parameters.artifact_id }}' }}
+          description: {{ '${{ parameters.description }}' }}
+          manifest_name: ${{ parameters.manifest_name }}
+          manifest_location: ${{ parameters.manifest_location }}
+          distro: ${{ parameters.distro }}
+          arch: ${{ parameters.arch }}
+          target: ${{ parameters.target }}
+          mode: ${{ parameters.mode }}
+          export_format: ${{ parameters.export_format }}
+
+          destination: https://{{ '${{ parameters.repo.host }}' }}/{{ '${{ parameters.repo.owner }}' }}/{{ '${{parameters.artifact_id}}' }}-gitops.git
+          source_repository: https://{{ '${{ parameters.repo.host }}' }}/{{ '${{ parameters.repo.owner }}' }}/{{ '${{parameters.artifact_id}}' }}.git
+          repository_name: {{ '${{parameters.artifact_id}}' }}
+          repository_host: {{ '${{ parameters.repo.host }}' }}
+          git_owner: {{ '${{ parameters.repo.owner }}' }}
+
+          cluster: ${{ parameters.base_domain }}
+          #namespace: {{ '${{ parameters.component_id }}' }}-build
+          user: {{ '${{ user.entity.metadata.name }}' }}
+          deployment_name: rhivos-build-template
+          
+          verify_commits: {{ '${{ parameters.repo.verify_commits }}' }}
+          
+        targetPath: ./tenant-gitops
+
+    - id: publish-gitops
+      name: Publishing to Resource Repository
+      action: publish:gitlab
+      input:
+        repoUrl: "{{ '${{ parameters.repo.host }}' }}?owner={{ '${{ parameters.repo.owner }}' }}&repo={{ '${{parameters.artifact_id}}' }}-gitops"
+        title: gitops resources for {{ '${{ parameters.artifact_id }}' }}
+        description: gitops resources for {{ '${{ parameters.artifact_id }}' }}
+        sourcePath: ./tenant-gitops
+        repoVisibility: public
 
   output:
     links:
