fixed a variable reference

--- a/templates/rhivos-build/skeleton/catalog-info.yaml
+++ b/templates/rhivos-build/skeleton/catalog-info.yaml
@@ -1,14 +1,14 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.component_id | dump}}
+  name: ${{values.artifact_id | dump}}
   {%- if values.description %}
   description: ${{values.description | dump}}
   {%- endif %}
   annotations:
-    #argocd/app-selector: rht-gitops.com/janus-argocd=${{values.component_id}}-bootstrap
-    backstage.io/kubernetes-id: ${{values.component_id}}
-    janus-idp.io/tekton: ${{values.component_id}}
+    #argocd/app-selector: rht-gitops.com/janus-argocd=${{values.artifact_id}}-bootstrap
+    backstage.io/kubernetes-id: ${{values.artifact_id}}
+    janus-idp.io/tekton: ${{values.artifact_id}}
     backstage.io/source-location: url:https://${{values.host}}/${{values.destination}}
     #backstage.io/techdocs-ref: url:https://${{values.host}}/${{values.destination}}
     gitlab.com/project-slug: ${{values.destination}}
