--- a/templates/rhivos-build/template.yaml
+++ b/templates/rhivos-build/template.yaml
@@ -40,7 +40,7 @@ spec:
           default: devel
           pattern: "^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$"
           description: Name of the manifest file
-          ui:help: 'Hint: without the .yaml extension'
+          ui:help: "Hint: without the .yaml extension"
         manifest_location:
           title: Manifest Location
           type: string
@@ -95,7 +95,7 @@ spec:
           type: string
           description: Base domain of the cluster, e.g. cluster-zgzkk.zgzkk.sandbox2007.opentlc.com
           default: cluster-...
-          ui:help: 'Hint: find the base domain in the URL above'
+          ui:help: "Hint: find the base domain in the URL above"
         repo:
           title: Repository Location
           type: object
@@ -105,7 +105,7 @@ spec:
               type: string
               description: Your SCM host
               default: gitlab-gitlab.apps.cluster-
-              ui:help: 'Hint: apply the same host as your cluster base domain'
+              ui:help: "Hint: apply the same host as your cluster base domain"
             owner:
               title: Repo Owner
               type: string
@@ -168,7 +168,7 @@ spec:
                   default: latest
                   type: string
                   description: Build Image tag
-    
+
   steps:
     - id: template
       name: Fetch Skeleton + Template
@@ -183,7 +183,6 @@ spec:
           namespace: ${{ parameters.artifact_id }}-dev
           owner: ${{ user.entity.metadata.name }}
           cluster: .apps.${{ parameters.base_domain }}
-          #cluster: .apps.{{ cluster_subdomain }}
           host: ${{ parameters.repo.host }}
           destination: ${{ parameters.repo.owner }}/${{ parameters.artifact_id }}
           manifest_name: ${{ parameters.manifest_name }}
@@ -193,7 +192,7 @@ spec:
           target: ${{ parameters.target }}
           mode: ${{ parameters.mode }}
           export_format: ${{ parameters.export_format }}
-          verify_commits: {{ '${{ parameters.repo.verify_commits }}' }}
+          verify_commits: { { "${{ parameters.repo.verify_commits }}" } }
 
     - id: publish
       name: Publish Source
@@ -217,7 +216,7 @@ spec:
         copyWithoutTemplating: []
         values:
           artifact_id: ${{ parameters.artifact_id }}
-          description: {{ '${{ parameters.description }}' }}
+          description: ${{ parameters.description }}
           manifest_name: ${{ parameters.manifest_name }}
           manifest_location: ${{ parameters.manifest_location }}
           distro: ${{ parameters.distro }}
@@ -235,9 +234,9 @@ spec:
           cluster: ${{ parameters.base_domain }}
           user: ${{ user.entity.metadata.name }}
           deployment_name: rhivos-build-template
-          
+
           verify_commits: ${{ parameters.repo.verify_commits }}
-          
+
         targetPath: ./tenant-gitops
 
     - id: publish-gitops
@@ -249,6 +248,16 @@ spec:
         description: gitops resources for ${{ parameters.artifact_id }}
         sourcePath: ./tenant-gitops
         repoVisibility: public
+
+    - id: create-gitops-resources
+      name: Create GitOps Resources
+      action: argocd:create-resources
+      input:
+        appName: "${{ parameters.component_id }}-bootstrap"
+        argoInstance: main
+        namespace: janus-argocd
+        repoUrl: https://${{ parameters.repo.host }}/${{ parameters.repo.owner }}/${{ parameters.artifact_id }}-gitops.git
+        path: 'gitops/'
 
   output:
     links:
