fixed the configmap

--- a/ansible/roles/patch_backstage/tasks/pre_install.yml
+++ b/ansible/roles/patch_backstage/tasks/pre_install.yml
@@ -4,14 +4,26 @@
 - name: Determine cluster base domain
   k8s_info:
     api_version: config.openshift.io/v1
+    kind: DNS
+    name: cluster
+  register: r_dns_config
+  failed_when: r_dns_config.resources | length < 1
+
+- name: Register cluster base domain
+  set_fact:
+    cluster_base_domain: "{{ r_dns_config.resources[0].spec.baseDomain }}"
+
+- name: Determine cluster apps domain
+  k8s_info:
+    api_version: config.openshift.io/v1
     kind: Ingress
     name: cluster
   register: r_ingress_config
   failed_when: r_ingress_config.resources | length < 1
 
-- name: Register cluster base domain
+- name: Register cluster apps domain
   set_fact:
-    cluster_base_domain: "{{ r_ingress_config.resources[0].spec.domain }}"
+    cluster_apps_domain: "{{ r_ingress_config.resources[0].spec.domain }}"
 
 - name: Retrieve GitLab private token
   kubernetes.core.k8s_info:
