--- a/ansible/roles/patch_backstage/defaults/main.yml
+++ b/ansible/roles/patch_backstage/defaults/main.yml
@@ -1,3 +1,14 @@
 ---
 # defaults
+templates_repo_group: "rhdh"
+templates_repo_name: "rhsdv-templates"
+templates_repo_url: "https://github.com/rhsdv-idp-repos/rhsdv-templates"
+templates_repo_branch: "main"
+
+# placeholder for the following variables
 jenkins_api_token: "JENKINS_TOKEN"
+
+# from Trusted Application Pipeline, without changes
+gitlab_root_user: root
+gitlab_root_password: openshift
+gitlab_namespace: gitlab
