--- a/ansible/roles/patch_backstage/tasks/install.yml
+++ b/ansible/roles/patch_backstage/tasks/install.yml
@@ -4,6 +4,12 @@
   debug:
     msg: "Running installation tasks for {{ role_name }}"
 
+- name: clone automotive repo
+  include_tasks:
+    file: ./clone_repo.yml
+    apply:
+      become: "{{ become_override | bool }}"
+
 - name: disable gitops sync
   shell: |
     oc patch apps backstage-gitops -n openshift-gitops --type=json -p '[{"op": "remove", "path": "/spec/syncPolicy/automated"}]'
